<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ToastActivity">


    <LinearLayout
        android:id="@+id/rootLinearLayout_One"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_toast_duration"
            android:textSize="19sp"/>

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="10dp">

            <RadioButton
                android:id="@+id/radioButton_short"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:text="@string/text_toast_short"
                android:checked="true"
                android:textSize="17sp"/>

            <RadioButton
                android:id="@+id/radioButton_long"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/text_toast_long"
                android:checked="false"
                android:textSize="17sp"/>

        </RadioGroup>
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:layout_below="@id/rootLinearLayout_One">

        <Button
            android:layout_width="180dp"
            android:layout_height="65dp"
            android:layout_marginBottom="5dp"
            android:text="@string/text_show_toast"
            android:onClick="showToastButton"/>

        <Button
            android:layout_width="180dp"
            android:layout_height="65dp"
            android:layout_marginTop="5dp"
            android:text="@string/text_show_custom_toast"
            android:onClick="showCustomToastButton"/>

    </LinearLayout>

</RelativeLayout>